Update basreng cilahoy viral 3.html

--- a/basreng cilahoy viral 3.html
+++ b/basreng cilahoy viral 3.html
@@ -98,7 +98,7 @@ li {
      <div class="header">				 	
          <div class="header-list">
 			 <ul>
-				  <li><a href="basreng cilahoy viral.html"> beranda </a></li> 
+				  <li><a href="index.html"> beranda </a></li> 
 				  <li><a href="basreng cilahoy viral 3.html"> profil</a></li> 
 				  <li> <a href="basreng cilahoy viral 2 .html"> produk </a></li>
 				    <li><a href="basreng cilahoy viral 4.html"> pesanan</a></li> 
